# node-leveldb-mcpe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HISTORY.md  README.md  binding.gyp  example.js  index.js  libleveldb.so.1  main.cc  package-lock.json  package.json
.circleci/: config.yml
.github/workflows/: build.yml
examples/: simple.js
patches/: force_fpic_linux.patch  snappy_path_linux.patch
src/: entrypoint.cpp  main.cc
test/: big.test.js  buffer.test.js  iterator.test.js  simple.test.js
